@@ -4,3 +4,4 @@
 2025-XX-XX: 2.0.1 (TBD)
 - Add FlashDataDone callback
 - Add RedrawEverything function
+- Fix lost-wakeup issue in tile and status bar updates
